--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
-<header>ALURAFUT</header>
+<html lang="pt-BR">
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <title>ALURAFUT</title>
+</head>
 
+<body>
+    <header>ALURAFUT</header>
 
+    <section>
+        <div>
+            <h1>TOP 40 DRIBLES DE CRISTIANO RONADO!</h1>
+            <p>#FutebolARTE</p>
+        </div>
 
-<h1>CONFIRA OS DIBLES HUMILHANTES DO CRISTIANO RONALDO!</h1>
-
-
-
-<p>#CR7</p>
-
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=Ln1I28y6seM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=Ln1I28y6seM"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
 
 </body>
+
+</html>
