--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <section>
         <div>
             <h1>TOP 40 DRIBLES DE CRISTIANO RONADO!</h1>
-            <p>#FutebolARTE</p>
+            <p>#Cristiano
+            #Futebol
+            #CR7</p>
         </div>
 
         <div>
