--- a/index.html
+++ b/index.html
@@ -1,28 +1,38 @@
 <html lang="pt-BR">
-<head>
-    <link rel="stylesheet" href="styles.css">
-    <title>ALURAFUT</title>
-</head>
+  <head>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <title>AluraFut</title>
+  </head>
 
-<body>
-    <header>ALURAFUT</header>
+  <body>
+    <header>AluraFut</header>
 
     <section>
-        <div>
-            <h1>TOP 40 DRIBLES DE CRISTIANO RONADO!</h1>
-            <p>#Cristiano
-            #Futebol
-            #CR7</p>
-        </div>
+      <div class="chamada-texto">
+        <h1>MELHORES GOLS DE CRISTIANO RONALDO!</h1>
+        <p>#Cristiano
+        #CR7
+        #Futebol</p>
+      </div>
 
-        <div>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=Ln1I28y6seM"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
+      <div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/watch?v=XnF0MYdIYI4"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+      </div>
     </section>
-
-</body>
-
+  </body>
 </html>
