--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 <!-- código omitido -->
 
 <section>
-  <h2>Filmes e séries</h2>
+  <h2>Confira outros astros!</h2>
   <div>
     <a href="https://www.youtube.com/watch?v=ANSwSJZozMw">
       <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
     </a>
-    <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+    <a href="https://www.youtube.com/watch?v=AYsjyVyo7fg">
       <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
     </a>
-    <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
+    <a href="https://www.youtube.com/watch?v=NKoKSQoB6UQ">
       <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
     </a>
     <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
