--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
   <h2>Confira outros astros!</h2>
   <div>
     <a href="https://www.youtube.com/watch?v=ANSwSJZozMw">
-      <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+      <img src="https://images.app.goo.gl/zPoBzrExRTQ3hGoL6" />
     </a>
     <a href="https://www.youtube.com/watch?v=AYsjyVyo7fg">
-      <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+      <img src="https://images.app.goo.gl/NXDJJRw4Xz8GucST7" />
     </a>
     <a href="https://www.youtube.com/watch?v=NKoKSQoB6UQ">
-      <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+      <img src="https://images.app.goo.gl/paPKZsEk9sNJQQqi7" />
     </a>
     <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
       <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
