--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <a href="https://www.youtube.com/watch?v=ANSwSJZozMw">
       <img src="https://images.app.goo.gl/zPoBzrExRTQ3hGoL6" />
     </a>
-    <a href="https://www.youtube.com/watch?v=AYsjyVyo7fg">
+    <a href="https://www.youtube.com/watch?app=desktop&v=M-LwsJeayNc">
       <img src="https://images.app.goo.gl/NXDJJRw4Xz8GucST7" />
     </a>
     <a href="https://www.youtube.com/watch?v=NKoKSQoB6UQ">
