--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     <a href="https://www.youtube.com/watch?v=NKoKSQoB6UQ">
       <img src="https://images.app.goo.gl/paPKZsEk9sNJQQqi7" />
     </a>
-    <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-      <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+    <a href=" https://www.youtube.com/watch?v=7IH4G0D5Zwg">
+      <img src="https://images.app.goo.gl/S8SqrdVxRPGemHEF9" />
     </a>
-    <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-      <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+    <a href="https://www.youtube.com/watch?v=zH5eqij-GGw">
+      <img src="https://images.app.goo.gl/FcBdo5VA6zMNBgxD8" />
     </a>
   </div>
 </section>
